<resources>
    <string name="app_name">门禁进门人脸识别</string>

    <string name="detect_no_face">未检测到人脸</string>
    <string name="detect_face_in">把脸移入框内</string>
    <string name="detect_zoom_in">手机拿近一点</string>
    <string name="detect_zoom_out">手机拿远一点</string>
    <string name="detect_head_up">头抬高些</string>
    <string name="detect_head_down">头放低些</string>
    <string name="detect_head_left">向左调整下头部角度</string>
    <string name="detect_head_right">向右调整下头部角度</string>
    <string name="detect_occ_face">脸部有遮挡</string>
    <string name="detect_occ_left_eye">左眼有遮挡</string>
    <string name="detect_occ_right_eye">右眼有遮挡</string>
    <string name="detect_occ_nose">鼻子有遮挡</string>
    <string name="detect_occ_mouth">嘴部有遮挡</string>
    <string name="detect_left_contour">左脸颊有遮挡</string>
    <string name="detect_right_contour">右脸颊有遮挡</string>
    <string name="detect_chin_contour">下巴有遮挡</string>
    <string name="detect_low_light">光线再亮些</string>
    <string name="detect_keep">请握稳手机，视线平视手机</string>
    <string name="detect_standard">请正对手机</string>
    <string name="detect_timeout">检测超时</string>
    <string name="liveness_eye">眨眨眼</string>
    <string name="liveness_eye_left">请眨眨左边眼睛</string>
    <string name="liveness_eye_right">请眨眨右边眼睛</string>
    <string name="liveness_mouth">张张嘴</string>
    <string name="liveness_head_left">向左缓慢转头</string>
    <string name="liveness_head_right">向右缓慢转头</string>
    <string name="liveness_head_left_right">摇摇头</string>
    <string name="liveness_head_up">缓慢抬头</string>
    <string name="liveness_head_down">缓慢低头</string>
    <string name="liveness_good">非常好</string>
    <string name="track_tips">提示：仅实时检测画面内面积最大的人脸</string>
    <string name="str_hint17">请输入展厅ID</string>
    <string name="str_hint1">欧工国际“长沙”展厅</string>
    <string name="str_hint2">European international changsha exhibition hall</string>
    <string name="str_qing">请</string>
    <string name="str_hint3">&#8197;看&#8197;向&#8197;摄&#8197;像&#8197;头</string>
    <string name="str_hint4">让我为你开启智慧之门</string>
    <string name="str_hint5">让我猜猜你是谁</string>
    <string name="str_sbjg">识别结果</string>
    <string name="str_nl">年龄：</string>
    <string name="str_xb">性别：</string>
    <string name="str_bq">表情：</string>
    <string name="str_hint18">请设置闸门ID，设置0为进，1为出</string>
    <string name="app_id">5c134cc9</string>
</resources>
